<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="18dp"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fcfafa"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="更新通知"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_below="@+id/tv_t"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:alpha="0.4"
                android:background="#aaaaaa" />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_t"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_detail"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_detail"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_version"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_vs_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_version"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_size"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:alpha="0.4"
            android:background="#aaaaaa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="立即更新"
                android:textSize="22sp" />

            <View
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:background="#aaaaaa" />

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="暂不更新"
                android:textSize="22sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:alpha="0.4"
            android:background="#aaaaaa" />
    </LinearLayout>
</android.support.v7.widget.CardView>